--- a/_sass/base/_forms.scss
+++ b/_sass/base/_forms.scss
@@ -1,6 +1,4 @@
 fieldset {
-  background-color: lighten($base-border-color, 10%);
-  border: $base-border;
   margin: 0 0 $small-spacing;
   padding: $base-spacing;
 }
@@ -29,9 +27,7 @@ label {
 #{$all-text-inputs},
 select[multiple=multiple],
 textarea {
-  border: $base-border;
   border-radius: $base-border-radius;
-  box-shadow: $form-box-shadow;
   box-sizing: border-box;
   font-family: $base-font-family;
   font-size: $base-font-size;
@@ -40,12 +36,10 @@ textarea {
   transition: border-color;
   width: 100%;
 
-  &:hover {
-    border-color: darken($base-border-color, 10%);
-  }
+  // &:hover {
+  // }
 
   &:focus {
-    border-color: $action-color;
     box-shadow: $form-box-shadow-focus;
     outline: none;
   }
