--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -2,12 +2,9 @@
 // http://bitters.bourbon.io
 // Copyright 2013-2015 thoughtbot, inc.
 // MIT License
-
 @import "variables";
-
 // Neat Settings -- uncomment if using Neat -- must be imported before Neat
 // @import "grid-settings";
-
 @import "buttons";
 @import "forms";
 @import "lists";
@@ -15,3 +12,4 @@
 @import "typography";
 @import "dark_mode";
 @import "imgs";
+@import "chat";
