--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -3,3 +3,5 @@
 	<li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
 	{% endif %}
 {% endfor %}
+
+<li class="nav-link"><a target="_blank" href="https://photography.teds-stuff.xyz">Photography <i class="fa-solid fa-up-right-from-square external-ico"></i></a>
