--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,6 +70,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <script src="https://beach-delightful.teds-stuff.xyz/script.js" data-site="ELRWFAIG" defer></script>
 	<!-- Tooltips -->
 	<script type="text/javascript">
 		window.tooltips = []
